--- a/package.json
+++ b/package.json
@@ -80,6 +80,8 @@
 		"react-dom": "^18.2.0",
 		"react-polyfills": "0.0.1",
 		"react-router": "^6.0.2",
-		"react-router-dom": "^6.4.3"
+		"react-router-dom": "^6.28.0",
+		"react-spring-3d-carousel": "^1.3.4",
+		"uuid": "^11.0.3"
 	}
 }
